<resources>
    <string name="app_name">NASA App</string>

    <string name="wiki_search_hint">Search in wiki</string>
    <string name="wiki_search_helper">Request length:</string>

    <string name="menu_item_add_favourite">Add to favourites</string>
    <string name="menu_item_favourite">Favourites</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_pod">Daily picture</string>
    <string name="menu_item_nearest">Nearest objects</string>
    <string name="menu_item_send">Send to...</string>
    <string name="menu_item_search">Search</string>

    <string name="data_chips_group">Load picture from:</string>
    <string name="pic_format_chips_group">Load picture in format:</string>
    <string name="two_days_before_chip">2 days before</string>
    <string name="yesterday_chip">Yesterday</string>
    <string name="today_chip">Today</string>
    <string name="hd_chip">HD format</string>

    <string name="setting_theme_title">Themes</string>
    <string name="setting_theme_space">Space</string>
    <string name="setting_theme_mars">Mars</string>
    <string name="setting_font_title">Fonts</string>
    <string name="setting_font_default">Default</string>
    <string name="setting_font_montserrat">Montserrat</string>
    <string name="setting_font_aguda">Aguda</string>

    <string name="error_not_picture">Today it\'s not a picture! See you next day!</string>
    <string name="error_empty_url">URL is empty</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_empty_list">The list is empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>