<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chips_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/pic_format_chips_group"
        android:textSize="18sp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/hd_choice_chip"
        style="@style/Widget.MaterialComponents.Chip.Choice.Custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/hd_chip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/data_chips_group"
        android:textSize="18sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/data_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/data_2_days_before_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice.Custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_days_before_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/data_yesterday_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice.Custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/data_today_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice.Custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_chip" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>